run instructions